fixed weird white space on header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,4 @@
+
 head{
   background-color: black;
 }
@@ -6,19 +7,7 @@ head{
   background-color: black;
   color:white;
   font-family: Georgia, 'Times New Roman', Times, serif;
-}
 
-.App-logo {
-  pointer-events: none;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  background-color: black;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-  }
 }
 
 .App-header {
