--- a/client/src/common/components/home.css
+++ b/client/src/common/components/home.css
@@ -39,10 +39,8 @@ head{
 }
 html{
     background-color: black;
-    max-height: 0vh;
+    
 }
-
-
 
 
 /* img{
